--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
 }
 header{
     height: 60px;
@@ -258,5 +258,34 @@ header{
     }
     .social{
         display: none;
+    }
+}
+@media (min-width:985px){
+    .navbar-expand-lg{
+        display: none !important;
+        
+    }
+   
+}
+@media (max-width:985px){
+    .navBar{
+        display: none !important;
+    }
+    .navbar-expand-lg{
+        background: transparent !important;
+        justify-content: start !important;
+        width: 100% !important;
+    }
+    .navbar-expand-lg .navbar-brand{
+        margin-left: 70px !important;
+    }
+    .navbar-expand-lg button{
+        order: -1 !important;
+    }
+    header{
+        padding: 0 !important;
+    width: 100% !important;
+    margin: 0 !important;
+    margin-left: 46px !important;
     }
 }
